--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,6 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: none
+
+  jwt:
+    secret: Cqd0S9ekrTqo7ozAWR1mR5Yrr8jvwnGPqwdasssdaQsdf
